[gd_scene load_steps=2 format=3 uid="uid://cfy6j31k76uta"]

[ext_resource type="Script" path="res://overworld/unit_stats_display.gd" id="1_mfksc"]

[node name="UnitStatsDisplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mfksc")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
offset_left = 1.0
offset_right = 227.0
offset_bottom = 252.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 334.0
offset_bottom = 239.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="Level" type="Label" parent="Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Level:"

[node name="HP" type="Label" parent="Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "HP:"

[node name="Strength" type="Label" parent="Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Strength:"

[node name="Magic" type="Label" parent="Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Magic:"

[node name="Skill" type="Label" parent="Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Skill:"

[node name="Speed" type="Label" parent="Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Speed:"

[node name="Luck" type="Label" parent="Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Luck:"

[node name="Defense" type="Label" parent="Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Defense:"

[node name="Magic_Defense" type="Label" parent="Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Magic Defense:"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="Select_Button" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Select"

[node name="Inventory_Button" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Inventory"

[node name="Market_Button" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Market"

[node name="Dismiss_Button" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Dismiss"

[node name="Close_Button" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Close
"

[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/Select_Button" to="." method="_on_select_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/Inventory_Button" to="." method="_on_inventory_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/Market_Button" to="." method="_on_market_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/Dismiss_Button" to="." method="_on_dismiss_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/Close_Button" to="." method="queue_free"]
